--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 header {
     margin-top: 10px;
     margin-right: 20px;
@@ -27,10 +26,18 @@ body {
 
 #search{
     margin-top: 20px;
-    width: 64%;
+    min-width: 64%;
     height: 30px;
+    max-width: 560px;
 }
 
+input[type=submit]{
+    background-color: #f8f9fa;
+    color: #3c4043;
+    border: 1px solid #f8f9fa;
+    font-size: 14px;
+    padding: 0.5em 1em;
+}
 .buttons{
     margin-top: 26px;
 }
