changed layout to flex

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,20 @@
-header {
-    margin-top: 10px;
-    margin-right: 20px;
-    text-align: end;
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     font-family: arial, sans-serif;
     font-size: 13px;
+    
+
+}header {
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;   
 }
 
 #gmail{
@@ -14,9 +25,7 @@ header {
     background-color: #1a73e8;
     color: white;
 }
-body {
-    text-align: center;
-}
+
 
 #foogle{
     margin-top: 8%;
@@ -46,4 +55,10 @@ input[type=submit]{
 }
 .buttons{
     margin-top: 26px;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    margin-top: auto;
 }
