--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,46 @@
 body {
     min-height: 100vh;
+    min-width: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     font-family: arial, sans-serif;
     font-size: 13px;
-    
+}
 
-}header {
+header {
     margin-top: 20px;
     margin-left: 30px;
     margin-right: 30px;
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;   
 }
 
+main{
+    text-align: center;
+}
+
 #gmail{
+    justify-content: center;
     margin-right: 5px;
 }
+
 
 #login{
     background-color: #1a73e8;
     color: white;
 }
 
-
+.logo{
+    align-items: center;
+}
 #foogle{
-    margin-top: 8%;
+    justify-items: center;
+    margin-top: 8%;;
     width: 100%;
     max-width: 272px;
 }
-
 .searchbar{
     margin: auto;
 }
@@ -53,6 +61,7 @@ input[type=submit]{
     font-size: 14px;
     padding: 0.5em 1em;
 }
+
 .buttons{
     margin-top: 26px;
 }
