--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,29 @@
-body {
-    min-height: 100vh;
-    min-width: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: arial, sans-serif;
-    font-size: 13px;
-}
-
 header {
     margin-top: 20px;
     margin-left: 30px;
     margin-right: 30px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;   
+    justify-content: flex-end;   
 }
+
+header span{
+    font-family: 'Material Icons';
+    font-size: 18px;
+}
+
+#gh-icon{
+    width: 100%;
+    max-width: 20px;
+}
+
+body {
+    min-height: 100vh;
+    min-width: 1;
+    font-family: arial, sans-serif;
+    font-size: 13px;
+}
+
 
 a{
     text-decoration: none;
@@ -25,7 +33,9 @@ a{
 a:hover{
     text-decoration: underline;
 }
+
 main{
+    align-content: flex-start;
     text-align: center;
 }
 
@@ -39,10 +49,10 @@ main{
     color: white;
 }
 
-
 #foogle{
     width: 100%;
     max-width: 272px;
+    margin-top: 60px;
 }
 .searchbar{
     margin: auto;
@@ -52,7 +62,7 @@ main{
 
 input[type=text]{
     width: 100%;
-    max-width: 500px;
+    max-width: 430px;
     height: 28px;
     font-size: large;
 }
@@ -78,6 +88,9 @@ footer{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 footer a{
@@ -85,5 +98,8 @@ footer a{
 }
 
 footer div{
-    padding: 15px
+    padding-top: 15px;
+    padding-bottom: 15px;
+    
 }
+
