--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 header {
     margin-top: 20px;
     margin-left: 30px;
-    margin-right: 30px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;   
@@ -14,7 +13,11 @@ header span{
 
 #gh-icon{
     width: 100%;
-    max-width: 20px;
+    max-width: 32px;
+    margin-top: -6px;
+    border-radius: 50%;
+    padding-left: 20px;;
+    padding-right: 20px;
 }
 
 body {
