--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,25 @@
 header {
-    margin-top: 20px;
-    margin-left: 30px;
+    padding-top: 20px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;   
 }
 
+header a{
+    padding: 5px 10px 0px 5px;
+    color: #000000DE
+}
+
 header span{
     font-family: 'Material Icons';
-    font-size: 18px;
+    font-size: 24px;
+    color: #5f6368;
 }
 
 #gh-icon{
     width: 100%;
     max-width: 32px;
-    margin-top: -6px;
+    margin-top: -5px;
     border-radius: 50%;
     padding-left: 20px;;
     padding-right: 20px;
@@ -42,10 +47,6 @@ main{
     text-align: center;
 }
 
-#gmail{
-    justify-content: center;
-    margin-right: 5px;
-}
 
 #login{
     background-color: #1a73e8;
@@ -54,13 +55,7 @@ main{
 
 #foogle{
     width: 100%;
-    max-width: 272px;
-    margin-top: 60px;
-}
-.searchbar{
-    margin: auto;
-    margin-top: 20px;
-
+    max-width: 260px;
 }
 
 input[type=text]{
@@ -78,9 +73,6 @@ input[type=submit]{
     padding: 0.5em 1em;
 }
 
-.buttons{
-    margin-top: 26px;
-}
 
 footer{
     font-size: 14px;
