--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,10 @@ input[type=submit]{
     padding: 0.5em 1em;
 }
 
-input[type=submit]:hovwe{
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 10%);
+input[type=submit]:hover{
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    border: 1px solid #dadce0;
+    color: #202124;
 }
 
 
