--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ header {
     padding-top: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;   
+    justify-content: flex-end;
+    align-items: center;  
 }
 
 #top-links{
@@ -10,20 +11,30 @@ header {
     color: #000000DE
 }
 
-header span{
+
+#gapps{
     font-family: 'Material Icons';
     font-size: 24px;
     color: #5f6368;
-    padding-left: 16px;
+    margin-left: 16px;
+    padding: 8px;
+    border-radius: 50%;;
+}
+
+#gapps:hover{
+    background-color: rgba(60,64,67,0.08);
 }
 
 #gh-icon{
-    width: 100%;
-    max-width: 32px;
-    margin-top: -5px;
+    height: 100%;
+    max-height: 32px;
     border-radius: 50%;
-    padding-left: 20px;;
-    padding-right: 20px;
+    margin-left: 20px;;
+    margin-right: 20px;
+}
+
+#gh-icon:hover{
+    box-shadow: 0 0px 10px rgb(230, 73, 230)
 }
 
 body {
@@ -72,7 +83,7 @@ main{
 }
 
 .searchbar:hover{
-    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    box-shadow: 0 1px 3px rgb(0 0 0 / 18%);
 }
 
 #search-ico{
@@ -87,12 +98,11 @@ main{
 }
 
 
-
 input[type=text]{
     width: 100%;
     max-width: 480px;
     height: 28px;
-    font-size: large;
+    font-size: 18px;
     border: none;
 }
 
